force-app/main/default/objects/LoggerSettings__mdt/LoggerSettings__mdt.object-meta.xml
<CustomObject>
    <label>Logger Settings</label>
    <description>Configuration for the Logging Framework: whether logging is enabled and the minimum severity level to persist.</description>
    <pluralLabel>Logger Settings</pluralLabel>
</CustomObject>