force-app/main/default/objects/LoggerSettings__mdt/fields/Enable_Pruning__c.field-meta.xml
<CustomField>
    <fullName>Enable_Pruning__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Pruning</label>
    <type>Checkbox</type>
</CustomField>