force-app/main/default/objects/LoggerSettings__mdt/fields/Is_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Is_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When unchecked, Logger will not persist any log entries.</description>
    <label>Is Enabled</label>
    <type>Checkbox</type>
</CustomField>