force-app/main/default/objects/LoggerSettings__mdt/fields/Purge_After_Days__c.field-meta.xml
<CustomField>
    <fullName>Purge_After_Days__c</fullName>
    <defaultValue>30</defaultValue>
    <description>Number of days to retain Log__c records before a scheduled purge job should delete them.</description>
    <label>Purge After Days</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>